--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
             <div class="about__buttons">
               <a
                 download=""
-                href="assets/pdf/Alexa-Cv.pdf"
+                href="assets/pdf/Akash-CV.pdf"
                 class="button button--flex"
               >
                 Download CV
