--- a/index.html
+++ b/index.html
@@ -416,7 +416,7 @@
                 <i class="uil uil-adobe skills__icon"></i>
 
                 <div>
-                  <h1 class="skills__title">Graphics Designer</h1>
+                  <h1 class="skills__title">Machine Learning</h1>
                   <span class="skills__subtitle"></span>
                 </div>
 
@@ -426,7 +426,7 @@
               <div class="skills__list grid">
                 <div class="skills__data">
                   <div class="skills__titles">
-                    <h3 class="skills__name">Figma</h3>
+                    <h3 class="skills__name">Open-CV, Jupyter</h3>
                     <!--<span class="skills__number">90%</span>-->
                   </div>
                   <!--<div class="skills__bar">
@@ -436,7 +436,7 @@
 
                 <div class="skills__data">
                   <div class="skills__titles">
-                    <h3 class="skills__name">Adobe Illustrator</h3>
+                    <h3 class="skills__name">Image Processing</h3>
                     <!--<span class="skills__number">90%</span>-->
                   </div>
                   <!--<div class="skills__bar">
@@ -446,7 +446,7 @@
 
                 <div class="skills__data">
                   <div class="skills__titles">
-                    <h3 class="skills__name">Adobe Premiere Pro</h3>
+                    <h3 class="skills__name">Tensorflow</h3>
                     <!--<span class="skills__number">90%</span>-->
                   </div>
                   <!--<div class="skills__bar">
@@ -456,13 +456,34 @@
 
                 <div class="skills__data">
                   <div class="skills__titles">
-                    <h3 class="skills__name">Adobe Xd</h3>
+                    <h3 class="skills__name">Neural Network</h3>
                     <!--<span class="skills__number">90%</span>-->
                   </div>
                   <!--<div class="skills__bar">
                     <span class="skills__percentage skills__xd"></span>
                   </div>-->
                 </div>
+
+                <div class="skills__data">
+                  <div class="skills__titles">
+                    <h3 class="skills__name">Scikit-Learn</h3>
+                    <!--<span class="skills__number">90%</span>-->
+                  </div>
+                  <!--<div class="skills__bar">
+                    <span class="skills__percentage skills__xd"></span>
+                  </div>-->
+                </div>
+
+                <div class="skills__data">
+                  <div class="skills__titles">
+                    <h3 class="skills__name">Matplotlib</h3>
+                    <!--<span class="skills__number">90%</span>-->
+                  </div>
+                  <!--<div class="skills__bar">
+                    <span class="skills__percentage skills__xd"></span>
+                  </div>-->
+                </div>
+
               </div>
             </div>
 
@@ -472,7 +493,7 @@
                 <i class="uil uil-adobe skills__icon"></i>
 
                 <div>
-                  <h1 class="skills__title">Graphics Designer</h1>
+                  <h1 class="skills__title">Source & Version Control</h1>
                   <span class="skills__subtitle"></span>
                 </div>
 
@@ -482,7 +503,7 @@
               <div class="skills__list grid">
                 <div class="skills__data">
                   <div class="skills__titles">
-                    <h3 class="skills__name">Figma</h3>
+                    <h3 class="skills__name">Git</h3>
                     <!--<span class="skills__number">90%</span>-->
                   </div>
                   <!--<div class="skills__bar">
@@ -492,7 +513,7 @@
 
                 <div class="skills__data">
                   <div class="skills__titles">
-                    <h3 class="skills__name">Adobe Illustrator</h3>
+                    <h3 class="skills__name">Github</h3>
                     <!--<span class="skills__number">90%</span>-->
                   </div>
                   <!--<div class="skills__bar">
@@ -500,25 +521,6 @@
                   </div>-->
                 </div>
 
-                <div class="skills__data">
-                  <div class="skills__titles">
-                    <h3 class="skills__name">Adobe Premiere Pro</h3>
-                    <!--<span class="skills__number">90%</span>-->
-                  </div>
-                  <!--<div class="skills__bar">
-                    <span class="skills__percentage skills__pp"></span>
-                  </div>-->
-                </div>
-
-                <div class="skills__data">
-                  <div class="skills__titles">
-                    <h3 class="skills__name">Adobe Xd</h3>
-                    <!--<span class="skills__number">90%</span>-->
-                  </div>
-                  <!--<div class="skills__bar">
-                    <span class="skills__percentage skills__xd"></span>
-                  </div>-->
-                </div>
               </div>
             </div>
 
@@ -528,7 +530,7 @@
                 <i class="uil uil-adobe skills__icon"></i>
 
                 <div>
-                  <h1 class="skills__title">Graphics Designer</h1>
+                  <h1 class="skills__title">Softwares</h1>
                   <span class="skills__subtitle"></span>
                 </div>
 
@@ -538,7 +540,7 @@
               <div class="skills__list grid">
                 <div class="skills__data">
                   <div class="skills__titles">
-                    <h3 class="skills__name">Figma</h3>
+                    <h3 class="skills__name">MATLAB</h3>
                     <!--<span class="skills__number">90%</span>-->
                   </div>
                   <!--<div class="skills__bar">
@@ -548,7 +550,7 @@
 
                 <div class="skills__data">
                   <div class="skills__titles">
-                    <h3 class="skills__name">Adobe Illustrator</h3>
+                    <h3 class="skills__name">VS Code</h3>
                     <!--<span class="skills__number">90%</span>-->
                   </div>
                   <!--<div class="skills__bar">
@@ -558,7 +560,7 @@
 
                 <div class="skills__data">
                   <div class="skills__titles">
-                    <h3 class="skills__name">Adobe Premiere Pro</h3>
+                    <h3 class="skills__name">Eclipse</h3>
                     <!--<span class="skills__number">90%</span>-->
                   </div>
                   <!--<div class="skills__bar">
@@ -568,13 +570,34 @@
 
                 <div class="skills__data">
                   <div class="skills__titles">
-                    <h3 class="skills__name">Adobe Xd</h3>
+                    <h3 class="skills__name">PyCharm</h3>
                     <!--<span class="skills__number">90%</span>-->
                   </div>
                   <!--<div class="skills__bar">
                     <span class="skills__percentage skills__xd"></span>
                   </div>-->
                 </div>
+
+                <div class="skills__data">
+                  <div class="skills__titles">
+                    <h3 class="skills__name">AutoCAD</h3>
+                    <!--<span class="skills__number">90%</span>-->
+                  </div>
+                  <!--<div class="skills__bar">
+                    <span class="skills__percentage skills__xd"></span>
+                  </div>-->
+                </div>
+
+                <div class="skills__data">
+                  <div class="skills__titles">
+                    <h3 class="skills__name">LTSpice</h3>
+                    <!--<span class="skills__number">90%</span>-->
+                  </div>
+                  <!--<div class="skills__bar">
+                    <span class="skills__percentage skills__xd"></span>
+                  </div>-->
+                </div>
+
               </div>
             </div>
 
@@ -585,6 +608,104 @@
                 <i class="uil uil-adobe skills__icon"></i>
 
                 <div>
+                  <h1 class="skills__title">Operating Systems</h1>
+                  <span class="skills__subtitle"></span>
+                </div>
+
+                <i class="uil uil-angle-down skills__arrow"></i>
+              </div>
+
+              <div class="skills__list grid">
+                <div class="skills__data">
+                  <div class="skills__titles">
+                    <h3 class="skills__name">Ubuntu</h3>
+                    <!--<span class="skills__number">90%</span>-->
+                  </div>
+                  <!--<div class="skills__bar">
+                    <span class="skills__percentage skills__figma"></span>
+                  </div>-->
+                </div>
+
+                <div class="skills__data">
+                  <div class="skills__titles">
+                    <h3 class="skills__name">Windows</h3>
+                    <!--<span class="skills__number">90%</span>-->
+                  </div>
+                  <!--<div class="skills__bar">
+                    <span class="skills__percentage skills__ai"></span>
+                  </div>-->
+                </div>
+
+                <div class="skills__data">
+                  <div class="skills__titles">
+                    <h3 class="skills__name">Kali Linux</h3>
+                    <!--<span class="skills__number">90%</span>-->
+                  </div>
+                  <!--<div class="skills__bar">
+                    <span class="skills__percentage skills__pp"></span>
+                  </div>-->
+                </div>
+
+              </div>
+            </div>
+
+            <!--==================== SKILLS 8====================-->
+            <div class="skills__content skills__close">
+              <div class="skills__header">
+                <i class="uil uil-adobe skills__icon"></i>
+
+                <div>
+                  <h1 class="skills__title">Data Structures and Algorithm</h1>
+                  <span class="skills__subtitle"></span>
+                </div>
+
+              </div>
+              </div>
+            </div>
+
+            <!--==================== SKILLS 9====================-->
+            <div class="skills__content skills__close">
+              <div class="skills__header">
+                <i class="uil uil-adobe skills__icon"></i>
+
+                <div>
+                  <h1 class="skills__title">Familiar With</h1>
+                  <span class="skills__subtitle"></span>
+                </div>
+
+                <i class="uil uil-angle-down skills__arrow"></i>
+              </div>
+
+              <div class="skills__list grid">
+                <div class="skills__data">
+                  <div class="skills__titles">
+                    <h3 class="skills__name">Networking</h3>
+                    <!--<span class="skills__number">90%</span>-->
+                  </div>
+                  <!--<div class="skills__bar">
+                    <span class="skills__percentage skills__figma"></span>
+                  </div>-->
+                </div>
+
+                <div class="skills__data">
+                  <div class="skills__titles">
+                    <h3 class="skills__name">Blockchain</h3>
+                    <!--<span class="skills__number">90%</span>-->
+                  </div>
+                  <!--<div class="skills__bar">
+                    <span class="skills__percentage skills__ai"></span>
+                  </div>-->
+                </div>
+
+              </div>
+            </div>
+
+            <!--==================== SKILLS 10====================-->
+            <div class="skills__content skills__close">
+              <div class="skills__header">
+                <i class="uil uil-adobe skills__icon"></i>
+
+                <div>
                   <h1 class="skills__title">Graphics Designer</h1>
                   <span class="skills__subtitle"></span>
                 </div>
@@ -634,7 +755,6 @@
                 </div>
               </div>
             </div>
-
 
 
           
