--- a/index.html
+++ b/index.html
@@ -1056,21 +1056,16 @@
             </div>
           </div>
 
-          <form action="" class="contact_form grid">
+          <form method="POST" class="contact__form grid">
             <div class="contact__inputs grid">
               <div class="contact__content">
                 <label for="" class="contact__label">Name</label>
-                <input type="text" class="contact__input" />
+                <input type="text" class="contact__input name" />
               </div>
               <div class="contact__content">
                 <label for="" class="contact__label">Email</label>
-                <input type="email" class="contact__input" />
+                <input type="email" class="contact__input email" />
               </div>
-            </div>
-
-            <div class="contact__content">
-              <label for="" class="contact__label">Project</label>
-              <input type="text" class="contact__input" />
             </div>
             <div class="contact__content">
               <label for="" class="contact__label">Message</label>
@@ -1079,16 +1074,17 @@
                 id=""
                 cols="0"
                 rows="7"
-                class="contact__input"
+                class="contact__input message"
               ></textarea>
             </div>
             <div>
-              <a href="#" class="button button--flex">
+              <button type="submit" class="button button--flex submit">
                 Send Message
                 <i class="uil uil-message"></i>
-              </a>
+              </button>
             </div>
           </form>
+
         </div>
       </section>
     </main>
@@ -1158,6 +1154,9 @@
     <a href="#" class="scrollup" id="scroll-up">
       <i class="uil uil-arrow-up scrollup__icon"></i>
     </a>
+
+    <!--Email contact usjng JS-->
+    <script src="https://smtpjs.com/v3/smtp.js"></script>
 
     <!--==================== SWIPER JS ====================-->
     <script src="assets/js/swiper-bundle.min.js"></script>
