--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             <li class="nav__item">
               <a href="#project" class="nav__link">
                 <i class="uil uil-scenery nav__icon"></i>
-                Project
+                Projects
               </a>
             </li>
             <li class="nav__item">
@@ -140,8 +140,7 @@
               <h1 class="home__title">Hi, I'm Akash</h1>
               <h3 class="home__subtitle">Software Engineer</h3>
               <p class="home__text">
-                Have high level skills in Web Design and Development, producing
-                quality work.
+                Have high level skills in Problem-solving, Web Design and Development, Data analysis, Machine Learning and AI
               </p>
               <a href="#contact" class="button button--flex">
                 Contact Me
@@ -149,12 +148,12 @@
               </a>
             </div>
           </div>
-          <div class="home__scroll">
+          <!--<div class="home__scroll">
             <a href="#about" class="home__scroll-button button--flex">
               <i class="uil uil-mouse-alt home__scroll-mouse"></i>
               <span class="home__scroll-name">Scroll down</span>
               <i class="uil uil-arrow-down home__scroll-arrow"></i>
-            </a>
+            </a>-->
           </div>
         </div>
       </section>
@@ -169,9 +168,9 @@
 
           <div class="about__data">
             <p class="about__description">
-              A Web Developer with passion and knowledge for creating beautiful,
-              user friendly and functional websites. Have a strong background in
-              Web technologies and UI/UX Design which help me deliver quality
+              A Software Engineer having skills, passion and knowledge for creating beautiful,
+              user friendly and functional websites. Designing and building Machine Learning Models. Have a strong background in
+              Web technologies and ML/AI, which help me deliver quality
               work.
             </p>
             <div class="about__info">
@@ -1102,13 +1101,13 @@
 
           <ul class="footer__links">
             <li>
-              <a href="#services" class="footer__link">Services</a>
+              <a href="#about" class="footer__link">About Me</a>
             </li>
             <li>
-              <a href="#portfolio" class="footer__link">Portfolio</a>
+              <a href="#skills" class="footer__link">Skills</a>
             </li>
             <li>
-              <a href="#contact" class="footer__link">Contact Me</a>
+              <a href="#project" class="footer__link">Projects</a>
             </li>
           </ul>
 
