--- a/index.html
+++ b/index.html
@@ -1096,7 +1096,7 @@
             <h1 class="footer__title">
               Akash Kumar Mishra
             </h1>
-            <span class="footer__subtitle">Web Developer</span>
+            <span class="footer__subtitle">Software Engineer</span>
           </div>
 
           <ul class="footer__links">
